# blesimrank

./: CMakeLists.txt  README.md
data/: .kdd.dict.swp
include/blesimrank/: blesimrank.hh  graph.hh
lib/: CMakeLists.txt
res/scalablesimrank/: run.sh  scalablesimrank.py
res/scalablesimrank/data/: kdd.bipartite  synthetic.graph
res/scalablesimrank/result/: synthetic.ssr
script/: run.sh
src/: CMakeLists.txt  main.cc
